Warming
In file included from main.cpp:5:0:
LOG/Log.h:46:8: warning: 'struct FunctionsCallTree' has pointer data members [-Weffc++]
 struct FunctionsCallTree
        ^
LOG/Log.h:46:8: warning:   but does not override 'FunctionsCallTree(const FunctionsCallTree&)' [-Weffc++]
LOG/Log.h:46:8: warning:   or 'operator=(const FunctionsCallTree&)' [-Weffc++]
main.cpp: In function 'int main()':
main.cpp:48:29: error: assignment of function 'int TrimLeftIgnoredSyms(char**, const char*)'
         TrimLeftIgnoredSyms = (&arrStrs);
                             ^
main.cpp:48:29: error: cannot convert 'StrParams**' to 'int(char**, const char*)' in assignment
In file included from StrAlgorithm.cpp:2:0:
LOG/Log.h:46:8: warning: 'struct FunctionsCallTree' has pointer data members [-Weffc++]
 struct FunctionsCallTree
        ^
LOG/Log.h:46:8: warning:   but does not override 'FunctionsCallTree(const FunctionsCallTree&)' [-Weffc++]
LOG/Log.h:46:8: warning:   or 'operator=(const FunctionsCallTree&)' [-Weffc++]
make: *** [all] Error 1
